fixed js link. Added function to toggle dark mode.

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -187,3 +187,23 @@ input[type=text]:focus {
  background: var(--darkGreen);
  color: var(--white);
 }
+
+/* 
+@media screen and (min-width: 600px) {
+  .nav {
+    flex-direction: column;
+
+  }
+  body {
+    flex-direction: wrap;
+    height: 100%;
+    width: 100%;
+  }
+
+
+}
+
+@media (min-width: 640px) { body {font-size:1rem;} } 
+@media (min-width:960px) { body {font-size:1.2rem;} } 
+@media (min-width:1100px) { body {font-size:1.5rem;} } 
+   */
